Feature/005 20231028 (#6)
* 1. 하드코딩 수정 & redis wild 설정 제거

* 2. collect(Collectors.toList()) -> toList() 변경 & 적절한 에러 변경

* 3. test code assertions 추가

* 4. code 수정 & enum 빠진 거 추가

* 5. secrity, webconfig 설정 부분 sonarqube에 걸려서 제외

* 6. create Product Service Test

* 7. 상품 등록 기능 추가