@@ -99,10 +99,10 @@ public class MemberAuthService {
         String[] roleSplitList = role.roleList.split(",");
         List<String> trimRoleList = Arrays.stream(roleSplitList)
                                           .map(r -> String.format("ROLE_%s", r.trim()))
-                                          .collect(Collectors.toList());
+                                          .toList();
 
         String roleList = trimRoleList.toString().replace("[", "").replace("]", "")
-                                      .replaceAll(" ", "");
+                                      .replace(" ", "");
 
         String accessToken = tokenProvider.createAccessToken(String.valueOf(member.getId()),
             roleList, accessTokenExpired);
